[package]
name = "echo-d"
version = "0.0.0"
edition = "2021"
description = "ECS networking"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
rustc-hash = "1.1.0"
serde_json = "1.0.108"
wasm-bindgen = "0.2.90"

[lib]
crate-type = ["cdylib", "rlib"]
